--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,13 +8,20 @@
 	</head>
 	<body>
 		<nav>
-			<a href="#"><img src="/logo.png" alt="" id="logo" /></a>
-			<ul>
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
+			<div>
+				<a href="#"><img src="/logo.png" alt="" id="logo" /></a>
+			</div>
+
+			<div id="name"><h1>Customer Help Desk</h1></div>
+
+			<div>
+				<ul id="list">
+					<!-- <li><a href="/index.html">Home</a></li> -->
+					<li><a href="#">About</a></li>
+					<!-- <li><a href="#">Services</a></li> -->
+					<!-- <li><a href="#">Contact</a></li> -->
+				</ul>
+			</div>
 		</nav>
 		<div id="box1">
 			<div class="login-container">
