--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,13 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/Style/style.css" />
+		<link rel="stylesheet" href="/Frontend/Style/style.css" />
 		<title>Online Customer Service Center</title>
 	</head>
 	<body>
 		<nav>
 			<div>
-				<a href="#"><img src="/logo.png" alt="" id="logo" /></a>
+				<a href="/Frontend/index.html"
+					><img src="/Frontend/Image/logo.png" alt="" id="logo"
+				/></a>
 			</div>
 
 			<div id="name"><h1>Customer Help Desk</h1></div>
@@ -17,7 +19,7 @@
 			<div>
 				<ul id="list">
 					<!-- <li><a href="/index.html">Home</a></li> -->
-					<li><a href="#">About</a></li>
+					<li><a href="/Frontend/about.html">About</a></li>
 					<!-- <li><a href="#">Services</a></li> -->
 					<!-- <li><a href="#">Contact</a></li> -->
 				</ul>
@@ -48,7 +50,14 @@
 					<br />
 				</form>
 			</div>
-			<a href="/register.html" id="newPage">Create New Account</a>
+
+			<div id="btn">
+				<a href="/Frontend/register.html" class="newPage">Register Customer</a>
+
+				<a href="/Frontend/forgotten.html" class="newPage"
+					>Forgotten password?</a
+				>
+			</div>
 		</div>
 	</body>
 	<script rel="script" href="/Script/script.js"></script>
