--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -3,21 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/Style/register.css" />
+		<link rel="stylesheet" href="/Frontend/Style/register.css" />
 		<title>Register</title>
 	</head>
 	<body>
 		<nav>
 			<div>
-				<a href="#"><img src="/logo.png" alt="" id="logo" /></a>
+				<a href="/Frontend/index.html"
+					><img src="/Frontend/Image/logo.png" alt="" id="logo"
+				/></a>
 			</div>
 
 			<div id="name"><h1>Customer Help Desk</h1></div>
 
 			<div>
 				<ul id="list">
-					<li><a href="/index.html">Home</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="/Frontend/index.html">Home</a></li>
+					<li><a href="/Frontend/about.html">About</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
@@ -25,14 +27,16 @@
 		</nav>
 
 		<div class="container">
-			<h1>User Registration</h1>
+			<br />
+			<br />
+			<h1>Customer Registration</h1>
 			<form id="registrationForm">
-				<label for="userType">Select User Type:</label>
+				<!-- <label for="userType">Select User Type:</label>
 				<select id="userType" name="userType">
 					<option value="ADMIN">ADMIN</option>
 					<option value="Customer">Customer</option>
 					<option value="Operator">Operator</option>
-				</select>
+				</select> -->
 				<br />
 				<!-- <label for="firstName">First Name:</label> -->
 				<input
